<resources>
    <string name="app_name">Kill-Fly</string>
    <string name="ajoutSite">Ajouter un site</string>
    <string name="ajoutSerie">Ajouter une série</string>
    <string name="ajoutPoste">Ajouter un poste</string>
    <string name="commencerPartie">Commencer la Partie</string>
    <string name="démo">Démonstration</string>
    <string name="consulterArchive">Consulter ses Archives</string>
    <string name="suivant">Suivant</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="spinner_title">Selectionner un site</string>
    <string name="spinner_historique">Selectionner un site</string>
    <string name="action_settings">Settings</string>
    <string name="start">Démarrer</string>
    <string name="reset">Rénitialiser</string>
    <string name="stop">Arrêter</string>
    <string name="retour">Retour</string>
    <string name="enregistrer">Enregistrer Partie</string>
    <string name="site">Site :</string>
    <string name="poste">Poste :</string>
    <string name="serie">Série :</string>
    <string-array name="array_name">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
</resources>
