<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/ver_img"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1">

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textSize="30sp" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg_disabled"
        android:onClick="startButton"
        android:text="@string/start"
        android:textColor="@color/windowBackground"
        android:textStyle="normal" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg_disabled"
        android:onClick="stopButton"
        android:text="@string/stop"
        android:textColor="@color/windowBackground"
        android:textStyle="normal" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg_disabled"
        android:onClick="resetButton"
        android:text="@string/reset"
        android:textColor="@color/windowBackground"
        android:textStyle="normal" />

    <com.abdellah.pcsalon.myapplication.chrono.Cercle
        android:id="@+id/cercle"
        android:layout_width="wrap_content"
        android:layout_height="159dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />


</LinearLayout>