<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/tueurdemouche"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.abdellah.pcsalon.myapplication.MainActivity"
        tools:showIn="@layout/activity_main"></LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/ver_img">

        <Button
            android:id="@+id/buttonEntrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg_disabled"
            android:text="@string/commencerPartie"
            android:textColor="@color/windowBackground"
            android:textStyle="normal" />

        <Button
            android:id="@+id/buttonHistorique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/button_bg_disabled"
            android:text="@string/consulterArchive"
            android:textColor="@color/windowBackground"
            android:textStyle="normal" />

        <Button
            android:id="@+id/buttonTest"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg_disabled"
            android:text="@string/démo"
            android:textColor="@color/windowBackground"
            android:textStyle="normal" />

    </RelativeLayout>

</LinearLayout>